--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -66,7 +66,9 @@ body {
 .skip-to-content {
     @include skip-to-content();
 }
-
+.highlight {
+    background-color: $gold-100;
+}
 
 .mu-sig__layer {
     background-color: #222;
@@ -76,12 +78,29 @@ body {
     @include mu-sig(
         $size:             'small',  
         $color:            'white'
-    );
+    );    
     @include center-block(
         $base-max-width,
         $base-min-width
     );
     padding: 0 1em;
+    
+    @media #{$query-small}
+    {
+        @include mu-sig(
+            $size:             'extra-small',  
+            $color:            'white'
+        ); 
+    }
+    
+    @media print 
+    {
+        @include mu-sig(
+            $size:             'small',  
+            $color:            'black',
+            $print:            'true'
+        );
+    }
 }
 
 
@@ -151,7 +170,12 @@ main {
     @media #{$query-large} {
     
         section {
-            @include grid-column(4, 5, $padding-right: 2.5rem, $padding-left: 1rem);
+            @include grid-column(
+                4, 
+                5, 
+                $padding-right: 2.5rem, 
+                $padding-left: 1rem
+            );
             padding-top: 2em;
         }
     }
@@ -160,41 +184,6 @@ main {
 @media #{$query-medium} { 
     
     .nav--site {
-        /*@include vertical-navigation(
-            $color: 'gold',
-            $include-mobile-menu: true
-        );
-        @include custom-vertical-navigation(
-            $color-border: $grey-200,
-            $color-link: $grey-500,
-            $color-link-background-highlight: #fff,
-            $color-link-background: #fff,
-            $color-link-hover: $red-400,
-            $color-link-background-highlight-hover: #fff,
-            $color-link-background-hover: #fff,
-            $color-sub-menu-border: transparent,
-            $color-sub-menu-link: $grey-500,
-            $color-sub-menu-link-background: #fff,
-            $color-sub-menu-link-hover: $red-400,
-            $color-sub-menu-link-background-hover: #fff,
-            $include-mobile-menu: true
-        );
-    }
-    
-    .nav__container {
-        & > .nav__list {
-            margin: 0;
-            border-bottom: solid 1px $grey-200;
-            border-top: solid 1px $grey-200;
-            
-            & > li .nav__list {
-                border: none;
-                
-                .nav__link {
-                    margin-left: 2.5em;
-                }
-            }
-        }*/
         
         &.nav--hide 
         {
@@ -491,11 +480,18 @@ footer {
 
 .section__topic h3
 {
-    margin: 1em 0;
+    margin: ($base-margin + 0em) 0;
     font-size: 1.25em;
     font-weight: $font-bold;
-    color: $warm-grey-400;
+    color: $warm-grey-600;
+    
+}
+
+.section__topic h4 
+{
+    margin: ($base-margin + 0em) 0; 
     text-transform: uppercase;
+    color: $warm-grey-500;
 }
 
 .section__row
@@ -548,7 +544,7 @@ footer {
 {
     @include clear-fix();
     list-style: none;
-    border-top: 1px solid $gold-400;
+    border-top: 1px solid $gold-300;
     margin: 2em 0;
     padding: 1em 0 0 0;
     
@@ -597,6 +593,7 @@ footer {
 {
     background: lighten($grey-100, 3%);
     padding: 16px;
+    margin: ($base-margin + 0em) 0;
 }
 
 .source-code--hide
@@ -759,6 +756,152 @@ pre[class*='language-']
 
 
 
+
+/* @group signatures */
+
+.unit-sig
+{
+    padding: 1em;
+    margin: ($base-margin + 0em) 0;
+}
+    
+.unit-sig--light
+{
+    background: $grey-100;
+
+    @include mu-unit-sig(
+        $size: 'medium',
+        $name-width: 284px,
+        $name-height: 40px,
+        $wordmark-indent: 2px
+    );
+    
+    @media #{$query-small}
+    {
+        @include mu-unit-sig(
+            $size: 'small',
+            $name-width: 194px,
+            $name-height: 27px,
+            $wordmark-indent: 1px
+        );
+    }
+            
+    @media #{$query-large}
+    {
+        @include mu-unit-sig(
+            $size: 'large',
+            $name-width: 404px,
+            $name-height: 57px,
+            $wordmark-indent: 2px
+        );
+    }
+    
+    @media print
+    {
+        @include mu-unit-sig(
+            $size: 'large',
+            $name-width: 404px,
+            $name-height: 57px,
+            $wordmark-indent: 2px,
+            $print: 'true'
+        );
+    }
+}
+
+.unit-sig--dark
+{
+    background: $grey-600;
+
+    @include mu-unit-sig(
+        $size: 'medium',
+        $color: 'white',
+        $name-width: 284px,
+        $name-height: 40px,
+        $wordmark-indent: 2px
+    );
+    
+    @media #{$query-small}
+    {
+        @include mu-unit-sig(
+            $size: 'small',
+            $color: 'white',
+            $name-width: 194px,
+            $name-height: 27px,
+            $wordmark-indent: 1px
+        );
+    }
+            
+    @media #{$query-large}
+    {
+        @include mu-unit-sig(
+            $size: 'large',
+            $color: 'white',
+            $name-width: 404px,
+            $name-height: 57px,
+            $wordmark-indent: 2px
+        );
+    }
+    
+    @media print
+    {
+        @include mu-unit-sig(
+            $size: 'large',
+            $name-width: 404px,
+            $name-height: 57px,
+            $wordmark-indent: 2px,
+            $print: 'true'
+        );
+    }
+}
+
+.unit-sig--center
+{
+    background: $gold-400;
+
+    @include mu-unit-sig(
+        $size: 'medium',
+        $center: 'true',
+        $name-width: 284px,
+        $name-height: 40px,
+        $wordmark-indent: 2px
+    );
+    
+    @media #{$query-small}
+    {
+        @include mu-unit-sig(
+            $size: 'small',
+            $center: 'true',
+            $name-width: 194px,
+            $name-height: 27px,
+            $wordmark-indent: 1px
+        );
+    }
+            
+    @media #{$query-large}
+    {
+        @include mu-unit-sig(
+            $size: 'large',
+            $center: 'true',
+            $name-width: 404px,
+            $name-height: 57px,
+            $wordmark-indent: 2px
+        );
+    }
+    
+    @media print
+    {
+        @include mu-unit-sig(
+            $size: 'large',
+            $center: 'true',
+            $name-width: 404px,
+            $name-height: 57px,
+            $wordmark-indent: 2px,
+            $print: 'true'
+        );
+    }
+}
+    
+/* @end */
 
 
 
