--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -137,7 +137,7 @@ header {
         margin: 0 0 .5em 0;
         
         a {
-            color: $grey-600;
+            color: $gray-600;
         }    
         a:hover,
         a:focus,
@@ -234,14 +234,14 @@ main {
             text-decoration: none;
             display: block;
             font-weight: $font-bold;
-            border-bottom: 1px solid $grey-200;
-            border-top: 1px solid $grey-200;
-            background-color: $grey-100;
+            border-bottom: 1px solid $gray-200;
+            border-top: 1px solid $gray-200;
+            background-color: $gray-100;
             
             &:hover,
             &:focus
             {
-                background-color: lighten($grey-100, 3%);
+                background-color: lighten($gray-100, 3%);
                             
                 .nav__menu-button__header
                 {
@@ -261,7 +261,7 @@ main {
         {
             font-size: 18px;
             line-height: 1.2;
-            color: $grey-600;
+            color: $gray-600;
             margin: 0;
             display: block;
         }
@@ -276,7 +276,7 @@ main {
             width: 24px;
             height: 4px;
             border-radius: 2px;
-            background: $grey-600;
+            background: $gray-600;
             position: absolute;
             left: 16px;
         }
@@ -316,8 +316,8 @@ main {
         .nav__container > .nav__list {
             padding: 1em 1em;
             margin: 0;
-            border-bottom: 1px solid $grey-200;
-            background-color: lighten($grey-100, 3%);
+            border-bottom: 1px solid $gray-200;
+            background-color: lighten($gray-100, 3%);
         }
         
          .nav__list {
@@ -332,7 +332,7 @@ main {
             }
             
             a {
-                color: $grey-500;
+                color: $gray-500;
                 text-decoration: none;
                 
                 &:hover,
@@ -358,7 +358,7 @@ main {
     }
     #mobile-nav {
         .nav__container > .nav__list {
-            border-top: 1px solid $grey-200;
+            border-top: 1px solid $gray-200;
         }
     }
 }    
@@ -405,7 +405,7 @@ main {
             }
             
             a {
-                color: $grey-500;
+                color: $gray-500;
                 text-decoration: none;
                 
                 &:hover,
@@ -454,10 +454,10 @@ main {
 footer {
     background-color: #222;
     padding: 2em 0;
-    color: $grey-200;
+    color: $gray-200;
     
     a {
-        color: $grey-200;
+        color: $gray-200;
         
         &:hover,
         &:focus {
@@ -512,7 +512,7 @@ footer {
     margin: ($base-margin + 0em) 0;
     font-size: 1.25em;
     font-weight: $font-bold;
-    color: $warm-grey-600;
+    color: $warm-gray-600;
     
 }
 
@@ -520,7 +520,7 @@ footer {
 {
     margin: ($base-margin + 0em) 0; 
     text-transform: uppercase;
-    color: $warm-grey-500;
+    color: $warm-gray-500;
 }
 
 .section__row
@@ -585,7 +585,7 @@ footer {
     {
         text-decoration: none;
         text-transform: uppercase;
-        color: $grey-400;
+        color: $gray-400;
         
         &:hover,
         &:focus,
@@ -629,7 +629,7 @@ footer {
 
 .source-code,
 .source {
-    background: lighten($grey-100, 3%);
+    background: lighten($gray-100, 3%);
     padding: $base-margin + 0em;
     margin: 0 0 ($base-margin + 0em) 0;
 }
@@ -657,7 +657,7 @@ footer {
 code[class*='language-'],
 pre[class*='language-']
 {
-    color: $grey-500;
+    color: $gray-500;
 	font-family: $font-monospace;
 	font-size: 13px;
 	direction: ltr;
@@ -680,9 +680,9 @@ pre[class*='language-']
         font-family: $font-sans;
         text-transform: uppercase;
         font-size: .9em;
-        color: $grey-400;
+        color: $gray-400;
         padding-bottom: 4px;
-        border-bottom: 1px solid $grey-200;
+        border-bottom: 1px solid $gray-200;
         margin: 16px 0;
         
         &:first-child
@@ -702,10 +702,10 @@ pre[class*='language-']
 // Inline code
 :not(pre) > code[class*='language-'] 
 {
-    background: lighten($grey-100, 3%);
+    background: lighten($gray-100, 3%);
 	padding: 2px 4px;
     margin-right: 2px;
-    border: 1px solid $grey-200;
+    border: 1px solid $gray-200;
     border-radius: 4px;
 	white-space: nowrap;
 }
@@ -721,7 +721,7 @@ pre[class*='language-']
     &.punctuation,
     &.url
     {
-    	color: $grey-400;
+    	color: $gray-400;
     }
     
     &.function,
